@@ -1193,3 +1193,5 @@
   EntityDb.getProperties() removed
   EntityDbProvider.getDescription() added
   RandomItemPanel UI changed, decrease button moved to the east side
+  RandomItemModel.getWeightRatio() added and tested
+  BoundedRandomItemModel no longer truncates the total weight to module # of items
